First commited as before_58231_rev1